examples/test/testpolicy18110.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18110
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key43: value33
      key2: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value32
          key44: value49
      podSelector:
        matchLabels:
          key9: value40
          key18: value14
          key33: value24
